BUGFIX: stopped double scrollbars on popups in IE7 (IE6 still broken)
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/sapphire/branches/2.3@70616 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/ComplexTableField_popup.css
+++ b/css/ComplexTableField_popup.css
@@ -1,7 +1,21 @@
-html,body {
-	overflow:auto !important; 
+/* The hackiest fix out there for double-scrollbar problems in IE 7 */
+
+*:first-child+html {
+	overflow: auto;
 	background: #fff !important; 
 }
+
+* html {
+	overflow: auto;
+	background: #fff !important; 	
+} 
+
+html>/**/body {
+	overflow:auto !important;
+	background: #fff; 
+}
+
+/* end of hackiness */
 
 .ComplexTableField_popup {
 	background: #fff;	
